force-app/main/default/objects/WorkRequestMapping__c/WorkRequestMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WorkRequestMapping</label>
</CustomObject>