force-app/main/default/objects/WorkRequestMapping__c/fields/AccessRequest_ProductTag__c.field-meta.xml
<CustomField>
    <fullName>AccessRequest_ProductTag__c</fullName>
    <label>AccessRequest_ProductTag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>