force-app/main/default/objects/WorkRequestMapping__c/fields/Bug_ProductTag__c.field-meta.xml
<CustomField>
    <fullName>Bug_ProductTag__c</fullName>
    <label>Bug_ProductTag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>