force-app/main/default/objects/WorkRequestMapping__c/fields/DataChangeRequest_ProductTag__c.field-meta.xml
<CustomField>
    <fullName>DataChangeRequest_ProductTag__c</fullName>
    <label>DataChangeRequest_ProductTag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>