force-app/main/default/objects/WorkRequestMapping__c/fields/FeatureRequest_ProductTag__c.field-meta.xml
<CustomField>
    <fullName>FeatureRequest_ProductTag__c</fullName>
    <label>FeatureRequest_ProductTag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>