force-app/main/default/objects/WorkRequestMapping__c/fields/ReportingRequest_ProductTag__c.field-meta.xml
<CustomField>
    <fullName>ReportingRequest_ProductTag__c</fullName>
    <label>ReportingRequest_ProductTag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>